SSCS-9381:Enable fortify scan for nightly build